--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ img {
 /** Header */
 .header {
     min-height: 60rem;
-    background-image: url(../img/casaE1A.jpg);
+    background-image: url(../img/casaE2\ \(1\).jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position:  center;
@@ -198,7 +198,7 @@ img {
 .nosotros {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    background-image: url(../img/casaE1.jpg);
+    background-image: url(../img/casaE2\ \(1\).jpeg);
     background-repeat: no-repeat;
     background-position: bottom center;
     background-size: contain;
@@ -249,7 +249,7 @@ img {
 }
 
 .basico {
-    background-image: url(../img/casaE1\ \(11\).jpg);
+    background-image: url(../img/casaE2\ \(4\).jpeg);
     background-size: contain;
 }
 @media (min-width: 768px) { 
@@ -275,7 +275,7 @@ img {
     }
 }
 .elite {
-    background-image: url(../img/casaE1.jpg);
+    background-image: url(../img/casaE2\ \(2\).jpeg);
     background-size: contain;
 }
 
